--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Cup</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/c467434f02.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+		<header>
+
+    </header>
+		<main>
+			<section>
+        <div class="header-wrapper">
+          <div class="header-text order-0">
+            <h1 class="header">The Greatest<br>show on the<br class="no-break">earth
+            </h1>
+            <p class="header-para">Contrary to popular belief, Lorem Ipsum is not simply 
+              random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+          </div>
+          <div class="banner-image order-2">
+            <img  class="img-responsive" src="images/banner-image.png" alt="">
+          </div>
+          <div class="banner-button order-1">
+            <button class="btn button-danger">Watch Live<i class="fa-solid fa-chevron-right icons"></i></button>
+          </div>
+          
+        </div>
+        				
+			</section>
+      <section>
+        <div class="feature-section">
+          <h1>hello</h1>
+        </div>
+      </section>
+    </main>
+		</body>
+	</body>
 </html>
