--- a/index.html
+++ b/index.html
@@ -38,8 +38,29 @@
         				
 			</section>
       <section>
-        <div class="feature-section">
-          <h1>hello</h1>
+        <div class="match-section">
+          <div class="vertical-nav">
+            <ul>
+              <li><a href="#home">Upcoming Match</a></li>
+              <li><a href="#news">All Group</a></li>
+              <li><a class="active" href="#contact">Blog</a></li>
+            </ul>
+          </div>
+          <div class="matches">
+            <div class="match">
+              <img class="img-responsive" src="images/blog-image.png" alt="">
+            </div>
+          </div>
+          <div class="matches">
+            <div class="match">
+              <img class="img-responsive" src="images/blog-image.png" alt="">
+            </div>
+          </div>
+          <div class="matches">
+            <div class="match">
+              <img class="img-responsive" src="images/blog-image.png" alt="">
+            </div>
+          </div>
         </div>
       </section>
     </main>
