--- a/index.html
+++ b/index.html
@@ -47,18 +47,29 @@
             </ul>
           </div>
           <div class="matches">
-            <div class="match">
+            <div class="card">
               <img class="img-responsive" src="images/blog-image.png" alt="">
+              <div>
+                <a class="btn anchor-button" type="submit" target="_blank" href="#!">Transfer</a>
+              </div>
+              
+            
             </div>
           </div>
           <div class="matches">
             <div class="match">
               <img class="img-responsive" src="images/blog-image.png" alt="">
+              <div>
+                <a class="btn anchor-button" type="submit" target="_blank" href="#!">Transfer</a>
+              </div>
             </div>
           </div>
           <div class="matches">
             <div class="match">
               <img class="img-responsive" src="images/blog-image.png" alt="">
+              <div>
+                <a class="btn anchor-button" type="submit" target="_blank" href="#!">Transfer</a>
+              </div>
             </div>
           </div>
         </div>
