--- a/index.html
+++ b/index.html
@@ -232,6 +232,32 @@
         </div>
        
       </section>
+      <section>
+        <footer>
+          <div class="btn-links">
+            <a class="btn-link margin-right" href="#!">Home</a>
+            <a class="btn-link margin-right" href="#!">Features</a>
+            <a class="btn-link margin-right" href="#!">Help</a>
+            <a class="btn-link margin-right" href="#!">Contact</a>
+            <a class="btn-link margin-right" href="#!">FAQ</a>
+          </div>
+
+          <div class="social-icons">
+            <a class="btn-link margin-right" href="#!">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a class="btn-link margin-right" href="#!">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a class="btn-link margin-right" href="#!">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a> 
+            <a class="btn-link margin-right" href="#!">
+              <i class="fa-brands fa-instagram"></i>
+            </a>   
+          </div>
+        </footer>
+      </section>
     </main>
 		</body>
 	</body>
