--- a/upcomming.html
+++ b/upcomming.html
@@ -136,7 +136,34 @@
         </div>
        
       </section>
+			
     </main>
+		<footer>
+      <h2>Goal</h2>
+      <hr>
+      <div class="btn-links">
+        <a class="btn-link margin-right" href="#!">Home</a>
+        <a class="btn-link margin-right" href="#!">Features</a>
+        <a class="btn-link margin-right" href="#!">Help</a>
+        <a class="btn-link margin-right" href="#!">Contact</a>
+        <a class="btn-link margin-right" href="#!">FAQ</a>
+      </div>
+      
+      <div class="social-icons">
+        <a class="btn-link margin-right" href="#!">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a class="btn-link margin-right" href="#!">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a class="btn-link margin-right" href="#!">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a> 
+        <a class="btn-link margin-right" href="#!">
+          <i class="fa-brands fa-instagram"></i>
+        </a>   
+      </div>
+    </footer>
 		</body>
 	</body>
 </html>
